fix: 优化配置项

--- a/my-components-react/.env
+++ b/my-components-react/.env
@@ -1,4 +1,4 @@
-REACT_APP_PUBLIC_PATH=//localhost:10004/
+# REACT_APP_PUBLIC_PATH=//localhost:10004/
 // 关闭打包时生成的map文件
 GENERATE_SOURCEMAP=false
 // 禁止默认打开浏览器
