--- a/my-react/.env
+++ b/my-react/.env
@@ -1,4 +1,4 @@
-REACT_APP_PUBLIC_PATH=//localhost:11003/
+# REACT_APP_PUBLIC_PATH=//localhost:11003/
 REACT_APP_MODULE_COMPONENTS_REACT=//localhost:10004
 // 关闭打包时生成的map文件
 GENERATE_SOURCEMAP=false
