--- a/my-vue2/.env
+++ b/my-vue2/.env
@@ -1,2 +1,2 @@
-VUE_APP_PUBLIC_PATH=//localhost:11001/
+# VUE_APP_PUBLIC_PATH=//localhost:11001/
 VUE_APP_MODULE_COMPONENTS_VUE2=http://localhost:10002
