--- a/my-vue3/.env
+++ b/my-vue3/.env
@@ -1,3 +1,3 @@
-VUE_APP_PUBLIC_PATH=//localhost:11002/
+# VUE_APP_PUBLIC_PATH=//localhost:11002/
 VUE_APP_MODULE_COMPONENTS_VUE3=http://localhost:10003
 VUE_APP_IS_ROOT=false
